# samp_npcs

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
client/: CMakeLists.txt  hooks.cpp  hooks.h  main.cpp  pch.h
client/npcs_module/: npc.cpp  npc.h  npcs_module.cpp  npcs_module.h  utils.cpp  utils.h
cmake/: FindPluginSDK.cmake
server/: CMakeLists.txt  Npc.cpp  Npc.h  NpcComponent.cpp  NpcComponent.h  NpcNetwork.hpp  NpcTask.hpp  natives.cpp
server/pawn-include/: pears_npc.inc  samp_npcs.inc
